[tool.poetry]
name = "streamlitdataquality"
version = "0.1.0"
description = ""
authors = ["LucasMarquesCorrea <lucas.correa@aluno.ufabc.aluno.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
